--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mpp React Project</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+        />
+        <!-- Icons to support Material Design -->
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        />
     </head>
     <body>
         <div id="root"></div>
